--- a/paper_pdf.Rmd
+++ b/paper_pdf.Rmd
@@ -391,7 +391,7 @@ Now we are interested in seeing the relationship with the same independent varia
 
 ```{r, include= FALSE}
 subset_2 <- data[c(6:11, 13:14, 16:17, 19:22, 24, 26:28)]
-poisson_reg <- glm(`Students eligible for FLP per thousand` ~ ., data  = subset)
+poisson_reg <- glm(`Students eligible for FLP per thousand` ~ ., data  = subset_2)
 summary(poisson_reg)
 ```
 ```{r, include = FALSE}
