--- a/paper_pdf.Rmd
+++ b/paper_pdf.Rmd
@@ -22,7 +22,9 @@ library("ggplot2")
 library("lindia")
 library("gridExtra")
 
-prepared_data <- read_csv("~/data/prepared_data.csv", 
+food = read.csv("~/Desktop/DATA_557/data/q1_and_q2.csv")
+census <- read_csv("~/Desktop/DATA_557/data/census.csv")
+prepared_data <- read_csv("~/Desktop/DATA_557/data/prepared_data.csv", 
     col_types = cols(CHILDPOVRATE15 = col_number(), 
         CONVSPTH09 = col_number(), FFRPTH09 = col_number(), 
         FSRPTH09 = col_number(), GROCPTH09 = col_number(), 
@@ -33,8 +35,7 @@ prepared_data <- read_csv("~/data/prepared_data.csv",
         PERCHLDPOV10 = col_number(), PERPOV10 = col_number(), 
         RECFACPTH09 = col_number(), SPECSPTH09 = col_number(), 
         SUPERCPTH09 = col_number(), VEG_ACRESPTH07 = col_number()))
-food = read.csv("~/data/q1_and_q2.csv")
-census <- read_csv("~/data/census.csv")
+
 data <- sqldf::sqldf("SELECT * FROM prepared_data 
               JOIN census
               USING(FIPS)")
@@ -106,8 +107,8 @@ We assess the plot of residuals vs fitted values, and it shows clear evidence of
 par(mfrow=c(1,2),mar=c(5,4,4,1))
 fit2=lm(PCT_OBESE_ADULTS08~ GROCPTH09 +SUPERCPTH09 +CONVSPTH09  + SPECSPTH09 + WICSPTH08 +FFRPTH09 + FMRKTPTH09 + RECFACPTH09, data = food)
 scatter.smooth(fit2$fitted.values,fit2$residuals,cex=0.5,col="gray")
-qqnorm(fit$residuals)
-qqline(fit$residuals)
+qqnorm(fit2$residuals)
+qqline(fit2$residuals)
 ```
 
 ```{r,echo=F,fig.height=6,fig.width=9,dev.args=list(pointsize=10)}
