--- a/paper_pdf.Rmd
+++ b/paper_pdf.Rmd
@@ -117,11 +117,56 @@ Based on the boxplot below, there is a clear trend of an increasing median and r
 knitr::include_graphics('/images/descriptive_food/obesity.png')
 ```
 
+Are the food source variables associated with the obesity rates in 2008/09? 
 
-# Question 2: Are local food choices associated with the Obesity rates? 
+Due to the limitation that we only have data for 2008 and 2013, time-series analysis is not applicable, so we could only perform linear models on these two years independently. The dataset contains three versions of all the variables, the absolute counts in each year, count per thousand capita in each year and the percentage change from 2008 to 2013. We first ran models on both counts and percentages of access to food choices per 1000 population. However, since the access to stores is highly correlated to the state population, we decided to use only the percentage model in our research questions.  
+For the first question, the response variable is obesity rate in 2008, and the predictor variables are the following food stores and facilities in each state: grocery stores, convenience stores, fast-food restaurants, WIC-authorized stores, supercenters & club stores, specialized food stores, farmers' markets, recreation & fitness facilities. 
+We then assessed the model assumptions using residual vs fitted plot and QQ plot, which shows a violation of constant variance but an acceptable level of residual normality.  
+
+Are the food source variables associated with the obesity rates in 2013/14? 
+We ran the same regression model on obesity rate with all the predictor variables mentioned above, instead using data in 2014. As we have more data in 2014, we also add a new variable food tax to check if there is any confounding effect of taxes on the access to food choices. 
+
+
+The following are the assumptions of linear regressions we used:
+Independence: 
+The county level data we used do not come froma simple rample sample. Thus we have to assume the independence in our data. 
+
+Normality:
+We have county level observations of over 3000 rows. As this value is relatively large, the central limit theorem will take effect and the non-normality does not matter. We also checked the residual qq plot for normality.  
+
+Constant Variance for obesity rate:
+We assess the plots of residuals vs fitted values of our linear models, and they show clear evidence of non-constant variance. The first plot is the residual plot for obesity rate in 2008/09, and the second plot is for obesity rate in 2013/14. There is clearly a pattern of residuals that is undesirable to us. We used robust standard error to try to correct the non-constant variance problem.
+
+```{r,echo=F,fig.height=6,fig.width=9,dev.args=list(pointsize=10)}
+par(mfrow=c(1,2),mar=c(5,4,4,1))
+fit2=lm(PCT_OBESE_ADULTS08~ GROCPTH09 +SUPERCPTH09 +CONVSPTH09  + SPECSPTH09 + WICSPTH08 +FFRPTH09 + FMRKTPTH09 + RECFACPTH09, data = food)
+scatter.smooth(fit2$fitted.values,fit2$residuals,cex=0.5,col="gray")
+qqnorm(fit2$residuals)
+qqline(fit2$residuals)
+```
+
+```{r,echo=F,fig.height=6,fig.width=9,dev.args=list(pointsize=10)}
+par(mfrow=c(1,2),mar=c(5,4,4,1))
+fit=lm(PCT_OBESE_ADULTS13~ GROCPTH14 +SUPERCPTH14 +CONVSPTH14  + SPECSPTH14 + WICSPTH12 +FFRPTH14 + FMRKTPTH16 + RECFACPTH14 +FOOD_TAX14, data = food)
+scatter.smooth(fit$fitted.values,fit$residuals,cex=0.5,col="gray")
+qqnorm(fit$residuals)
+qqline(fit$residuals)
+```
+
+#  Results
+The results of our analyses for the five questions posed are detailed below.
+### Are local food choices associated with the Obesity rates? 
+###T-test result:
+t = 58.258, df = 3136, p-value < 2.2e-16
+alternative hypothesis: true difference in mean obesity rate between 2008 and 2013 is not equal to 0
+95 percent confidence interval:
+ 1.285081 1.374594
+mean of the differences = 1.329837
+
+At the significance level of 0.05, the confidence interval of difference in means does not include 0. Additionally, the p-value of this test is smaller than 0.05, so we can reject the null hypothesis and state that there is evidence showing a significant increase of around 1.33% in adult obesity rate from 2008 to 2013.
 
 	
-### Are the food source variables associated with the obesity rates in 2008/09? 
+### Question 1: Are the food source variables associated with the obesity rates in 2008/09? 
 
 \begin{table}[!htbp] \centering 
   \caption{} 
@@ -144,7 +189,11 @@ RECFACPTH09 & $$-$9.349$ & $0.830$ & $$-$11.261$ & $0$ & $1.047$ \\
 \end{tabular} 
 \end{table} 
 
-### Are the food source variables associated with the obesity rates in 2013/14? 
+The per capita access to all the food sources and fitness facilities have a significant impact on 2008 adult obesity rate. More specifically, access to super centers, convenience stores and WIC-authorized stores is positively associated with obesity rate while the rest of the predictors have a negative effect.  
+
+### Question 2: Are the food source variables associated with the obesity rates in 2013/14? 
+Similar to the first model, all the variables in the 2013 model are significant and of the same sign as before. Food tax is also positively related to the obesity rate.
+After using robust standard error to correct for the non-constant variance, our results still show significant outcomes. From 2008 to 2013, the influence of predictors also grew, which is shown by the increase in absolute value of estimated betas for each independent variable. 
 
 \begin{table}[!htbp] \centering 
   \caption{} 
@@ -168,31 +217,6 @@ FOOD\_TAX14 & $0.446$ & $0.036$ & $12.307$ & $0$ & $0.036$ \\
 \end{tabular} 
 \end{table} 
 
-The following are the assumptions of the two linear regressions we used:
-Independence:
-A common assumption across all inferential tests is that the observations in the sample are independent from each other. 
-
-Normality:
-We have county level observations of over 3000 rows. As this value is relatively large, the central limit theorem will take effect and the non-normality does not matter. We also checked the residual qq plot for normality.  
-
-Constant Variance for obesity rate:
-We assess the plot of residuals vs fitted values, and it shows clear evidence of non-constant variance. There is clearly a pattern of residuals that is undesirable to us. We used robust standard error to try to correct the non-constant variance problem.
-
-```{r,echo=F,fig.height=6,fig.width=9,dev.args=list(pointsize=10)}
-par(mfrow=c(1,2),mar=c(5,4,4,1))
-fit2=lm(PCT_OBESE_ADULTS08~ GROCPTH09 +SUPERCPTH09 +CONVSPTH09  + SPECSPTH09 + WICSPTH08 +FFRPTH09 + FMRKTPTH09 + RECFACPTH09, data = food)
-scatter.smooth(fit2$fitted.values,fit2$residuals,cex=0.5,col="gray")
-qqnorm(fit2$residuals)
-qqline(fit2$residuals)
-```
-
-```{r,echo=F,fig.height=6,fig.width=9,dev.args=list(pointsize=10)}
-par(mfrow=c(1,2),mar=c(5,4,4,1))
-fit=lm(PCT_OBESE_ADULTS13~ GROCPTH14 +SUPERCPTH14 +CONVSPTH14  + SPECSPTH14 + WICSPTH12 +FFRPTH14 + FMRKTPTH16 + RECFACPTH14 +FOOD_TAX14, data = food)
-scatter.smooth(fit$fitted.values,fit$residuals,cex=0.5,col="gray")
-qqnorm(fit$residuals)
-qqline(fit$residuals)
-```
 
 
 # Question 3: Are there any group of factors that predict eligibility in the school free lunch program.
@@ -668,5 +692,13 @@ plot(model_4, which=1)
 
   
   
+# Conclusion
+## Are local food choices associated with the Obesity rates? 
+The adult obesity rate in the US has a significant increase of 1.33% on average from 2008 to 2013. In both years, the access of food choices and fitness facilities per 1000 population, and taxes are highly correlated to the obesity rate: super centers, convenient stores, WIC-authorized store and food taxes have positive effects and grocery stores; specialized food stores, fast food restaurants, farmer’s markets and recreation and fitness facilities are negative associated with it. Besides, the effect of the same independent variable on obesity rate exaggerates from 2008 to 2013.
+
+# Discussion & Future Work
+Most of the results look reasonable to us, but the effect of access to fast food restaurants is different from our expectation. Intuitively, fast foods are the most high calories among all the food choices we have but the model shows a negative relation with obesity rates. We believe there should be other variables such as income, public welfare affecting the level of obesity rates, but due to the limitation of our dataset, we were not able to add them in the models. For now we only use state level stats in the first research question, but the county level data is available for further modeling. 
+For our next step, we will try some other variables and also explore the interaction effects among variables. Since the linear regression does not meet the requirement of constant variance, and the r-squared is only about 0.2, we might choose more flexible and complex models in the future. For example if we had data for years between 2008 and 2013, we could do time series analysis. 
+
   
-  
+# Appendix
